--- a/application.json
+++ b/application.json
@@ -9,6 +9,9 @@
   "appIsExample": false,
   "unreadCommentThreads": 0,
   "color": "#D9E7FF",
+  "unpublishedAppLayout": {
+    "type": "DESKTOP"
+  },
   "unpublishedCustomJSLibs": [],
   "publishedCustomJSLibs": [],
   "evaluationVersion": 2,
